--- a/Zdk/Server/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
+++ b/Zdk/Server/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
@@ -1,2 +1,2 @@
 ﻿@using Zdk.Server.Areas.Identity.Pages.Account.Manage
-@using Zdk.Utilities.Authentication.Data
+@using Zdk.Utilities.Authentication
