--- a/Zdk/Server/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Zdk/Server/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using Zdk.Server.Areas.Identity
 @using Zdk.Server.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Zdk.Utilities.Authentication.Data
+@using Zdk.Utilities.Authentication
