--- a/Zdk/Server/Pages/Shared/_LoginPartial.cshtml
+++ b/Zdk/Server/Pages/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Zdk.Utilities.Authentication.Data
+@using Zdk.Utilities.Authentication
 
 @inject SignInManager<ZdkUser> SignInManager
 @inject UserManager<ZdkUser> UserManager
