--- a/server/styles/style.scss
+++ b/server/styles/style.scss
@@ -1,4 +1,221 @@
+$primary-900: #23036a;
+$primary-800: #30009c;
+$primary-700: #3700b3;
+$primary-600: #5600e8;
+$primary-500: #6200ee;
+$primary-400: #7f39fb;
+$primary-300: #985eff;
+$primary-200: #bb86fc;
+$primary-100: #dbb2ff;
+$primary-050: #f2e7fe;
+
+$primary: $primary-200;
+
+$primary-variant: $primary-700;
+
+$on-primary-he: #000000;
+$on-primary-me: #000000bd;
+$on-primary-disabled: #000000;
+
+$on-primary-variant: #ffffff;
+
+$secondary-900: #005457;
+$secondary-800: #017374;
+$secondary-700: #018786;
+$secondary-600: #019592;
+$secondary-500: #01a299;
+$secondary-400: #00b3a6;
+$secondary-300: #00c4b4;
+$secondary-200: #03dac5;
+$secondary-100: #70efde;
+$secondary-050: #c8fff4;
+
+$on-secondary: #00000061;
+
+$background: #121212;
+$on-background: #ffffffde;
+
+$surface: #121212;
+
+$on-surface-he: #ffffffde;
+$on-surface-me: #ffffff99;
+$on-surface-disabled: #ffffff61;
+
+$error: #cf6679;
+
+$on-error: #000000;
+
+$outline: #ffffff1f;
+
+$elevation-overlay-surface-00dp: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+$elevation-overlay-surface-01dp: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+  0px 2px 1px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-02dp: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
+  0px 3px 1px 0px rgba(0, 0, 0, 0.12), 0px 2px 2px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-03dp: 0px 1px 8px 0px rgba(0, 0, 0, 0.2),
+  0px 3px 3px 0px rgba(0, 0, 0, 0.12), 0px 3px 4px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-04dp: 0px 2px 4px 0px rgba(0, 0, 0, 0.2),
+  0px 1px 10px 0px rgba(0, 0, 0, 0.12), 0px 4px 5px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-06dp: 0px 3px 5px 0px rgba(0, 0, 0, 0.2),
+  0px 1px 18px 0px rgba(0, 0, 0, 0.12), 0px 6px 10px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-08dp: 0px 5px 5px 0px rgba(0, 0, 0, 0.2),
+  0px 3px 14px 0px rgba(0, 0, 0, 0.12), 0px 8px 10px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-12dp: 0px 7px 8px 0px rgba(0, 0, 0, 0.2),
+  0px 5px 22px 0px rgba(0, 0, 0, 0.12), 0px 12px 17px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-16dp: 0px 8px 10px 0px rgba(0, 0, 0, 0.2),
+  0px 6px 30px 0px rgba(0, 0, 0, 0.12), 0px 16px 24px 0px rgba(0, 0, 0, 0.14);
+$elevation-overlay-surface-24dp: 0px 11px 15px 0px rgba(0, 0, 0, 0.2),
+  0px 9px 46px 0px rgba(0, 0, 0, 0.12), 0px 24px 38px 0px rgba(0, 0, 0, 0.14);
+
 body {
-  background-color: black;
-  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-family: Roboto;
+  font-size: 96px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 112px; /* 116.667% */
+  letter-spacing: -1.5px;
+}
+
+h2 {
+  font-family: Roboto;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 72px; /* 120% */
+  letter-spacing: -0.5px;
+}
+
+h3 {
+  font-family: Roboto;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 56px; /* 116.667% */
+}
+
+h4 {
+  font-family: Roboto;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px; /* 105.882% */
+}
+
+h5 {
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 100% */
+  letter-spacing: 0.18px;
+}
+
+h6 {
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 120% */
+  letter-spacing: 0.15px;
+}
+
+.subtitle-1 {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.15px;
+}
+
+.subtitle-2 {
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 171.429% */
+  letter-spacing: 0.1px;
+}
+
+.body-1 {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+}
+
+.body-2 {
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  letter-spacing: 0.25px;
+}
+
+button {
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 114.286% */
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+}
+
+.caption {
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 133.333% */
+  letter-spacing: 0.4px;
+}
+
+.overline {
+  font-family: Roboto;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 160% */
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+}
+
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  background-color: #1a1a2e;
+  color: #94b4da;
+  height: 100vh;
+
+  &__body {
+    display: flex;
+    flex-direction: row;
+
+    .sidebar {
+      background-color: black;
+      height: calc(100vh - 40px);
+      width: 80px;
+    }
+  }
+
+  &__content {
+    padding: 10px;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+    height: 40px;
+  }
 }
