--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,1 +1,11 @@
 <h1>{{.Title}}</h1>
+<div class="container">
+  <div class="login-page clearfix">
+    <div class="login-box auth0-box before">
+      <img src="https://i.cloudup.com/StzWWrY34s.png" />
+      <h3>Auth0 Example</h3>
+      <p>Zero friction identity infrastructure, built for developers</p>
+      <a id="qsLoginBtn" class="" href="/login">SignIn</a>
+    </div>
+  </div>
+</div>
