--- a/server/views/layouts/main.html
+++ b/server/views/layouts/main.html
@@ -16,5 +16,7 @@
       </div>
     </div>
     <script src="js/index.js"></script>
+    <script src="js/js.cookie.js"></script>
+    <script src="js/user.js"></script>
   </body>
 </html>
