--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,7 @@
 @import "shared/styles";
 @import "index/styles";
 @import "shoppingLists/styles";
+@import "tasks/styles";
 @import "user/styles";
 
 .subtitle-1 {
