--- a/view/shared.templ
+++ b/view/shared.templ
@@ -7,7 +7,7 @@ import "github.com/sknutsen/Zdk/constants"
 templ MainLayout(state models.ClientStateBase) {
     <html lang="en">
     <head>
-        <title></title>
+        <title>Zdk</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="/css/style.css" rel="stylesheet" />
