--- a/view/tasks.templ
+++ b/view/tasks.templ
@@ -26,7 +26,7 @@ templ ListTasks(tasks []models.Task) {
             </button>
         </h3>
 
-        <div class="tasks-page__list_tasks">
+        <div class="tasks-page__list-tasks">
             for _, v := range tasks {
                 <div class="tasks-page__task">
                     <span>{ v.Name }</span>
