--- a/styles/shared/_elements.scss
+++ b/styles/shared/_elements.scss
@@ -12,6 +12,7 @@ h1 {
   font-weight: 300;
   line-height: 112px; /* 116.667% */
   letter-spacing: -1.5px;
+  margin: 5px;
 }
 
 h2 {
@@ -29,6 +30,7 @@ h3 {
   font-style: normal;
   font-weight: 400;
   line-height: 56px; /* 116.667% */
+  margin: 2px;
 }
 
 h4 {
