--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@
 @import "shoppingLists/styles";
 @import "tasks/styles";
 @import "user/styles";
+@import "workouts/styles";
 
 .subtitle-1 {
   font-family: Roboto;
