--- a/styles/shared/_styles.scss
+++ b/styles/shared/_styles.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./elements";
+@import "./inputs";
 @import "./main-layout";
 @import "./sidebar";
 @import "./topbar";
